--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <fieldset>
       <h1>Project 1</h1>
       <label>Email:</label>
-      <input class="width" type="email" name="email" placeholder="Write your email here">
+      <input type="email" name="email" placeholder="Write your email here">
       <label>Phone:</label>
-      <input class="width" type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+      <input type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
       <label>Birthday:</label>
-      <input class="width" type="date" name="Birthday:">
+      <input type="date" name="Birthday:">
       <input type="submit" value="Send Me!">
     </fieldset>
   </form>
