added username and password

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <form>
     <fieldset>
       <h1>Project 1</h1>
+      <label>Username:</label>
+      <input type="text" name="username">
+      <label>password:</label>
+      <input type="password" name="psw">
       <label>Email:</label>
       <input type="email" name="email" placeholder="Write your email here">
       <label>Phone:</label>
