--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <input type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
       <label>Birthday:</label>
       <input type="date" name="Birthday:">
-      <input type="submit" value="Send Me!">
+      <label>Address:</label>
+      <input type="text" name="Address" placeholder="1234 S. Fake Lane">
+      <input type="submit" value="Submit">
     </fieldset>
   </form>
 </body>
