--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
     <fieldset>
       <h1>Shanaman warriors</h1>
       <p>The Shanaman warriors is a national UNO league comprised of the best of the best UNO players. These players know how to use 0's, 7's and plus fours as well as special cards inorder to make the game play intersting. Our reigning champion Wade once said "I have learned from masters the sacred art of UNO". If you join our league you can learn from the best of the best the art of UNO and you too can become UNO champion. If you are intersted in our league then you just have to fill out the the form below. People who sign up and join the league will recive a free t-shirt.</p>
-      <label>Username:</label>
-      <input type="text" name="username">
-      <label>password:</label>
-      <input type="password" name="psw">
-      <label>Email:</label>
-      <input type="email" name="email" placeholder="Write your email here">
-      <label>Phone:</label>
-      <input type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
-      <label>Birthday:</label>
-      <input type="date" name="Birthday:">
-      <label>Address:</label>
-      <input type="text" name="Address" placeholder="1234 S. Fake Lane">
-      <input type="submit" value="Submit">
+      <div id ="sign-up">
+        <label>Username:</label>
+        <input type="text" name="username">
+        <label>password:</label>
+        <input type="password" name="psw">
+        <label>Email:</label>
+        <input type="email" name="email" placeholder="Write your email here">
+        <label>Phone:</label>
+        <input type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+        <label>Birthday:</label>
+        <input type="date" name="Birthday:">
+        <label>Address:</label>
+        <input type="text" name="Address" placeholder="1234 Fake Lane">
+        <input type="submit" value="Submit">
+      </div>
     </fieldset>
   </form>
 </body>
