--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>The Shanaman warriors is a national UNO league comprised of the best of the best UNO players. These players know how to use 0's, 7's and plus fours as well as special cards in order to make the game play intersting. Our reigning champion</p>
   <div>
     <img src="images/wade.jpg " alt="Wade from youtube">
-    <p><span>Wade</span> youtube's best UNO player. Once said "I have learned from masters the sacred art of UNO".</p>
+    <p> "I have learned from masters the sacred art of UNO".</p><span>- Wade youtube's best UNO player.</span>
   </div>
   <p>If you join our league you can learn from the best of the best the art of UNO and you too can become UNO champion. If you are intersted in our league then you just have to fill out the the form below. People who sign up and join the league will recive a free t-shirt.</p>
   <div id="sign-up">
