removed text and fixed margin

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="images/wade.jpg " alt="Wade from youtube">
     <p> "I have learned from masters the sacred art of UNO".</p><span>- Wade youtube's best UNO player.</span>
   </div>
-  <p>If you join our league you can learn from the best of the best the art of UNO and you too can become UNO champion. If you are intersted in our league then you just have to fill out the the form below. People who sign up and join the league will recive a free t-shirt.</p>
+  <p>If you join our league you can learn from the best of the best the art of UNO and you too can become UNO champion. If you are intersted in our league then you just have to fill out the the form below.</p>
   <div id="sign-up">
     <form>
       <fieldset>
