--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <p>If you join our league you can learn from the best of the best the art of UNO and you too can become UNO champion. If you are intersted in our league then you just have to fill out the the form below.</p>
   <div id="sign-up">
-    <form>
+    <form name="unoForm" method="get" action="#null" autocomplete="on">
       <fieldset>
         <label>Username:</label>
         <input type="text" name="username">
