--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <label>Phone:</label>
         <input type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
         <label>Birthday:</label>
-        <input type="text" name="Birthday:" placeholder="12-10-20" pattern="[1-12]{2}-[1-31]{2}-[1-99]{2}">
+        <input type="date" name="Birthday">
         <label>Address:</label>
         <input type="text" name="Address" placeholder="1234 Fake Lane">
         <input type="submit" value="Submit">
