--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <form name="unoForm" method="get" action="#null" autocomplete="on">
       <fieldset>
         <label>Username:</label>
-        <input type="text" name="username">
+        <input class="size" type="text" name="username">
         <label>password:</label>
-        <input type="password" name="psw">
+        <input class="size" type="password" name="psw">
         <label>Email:</label>
-        <input type="email" name="email" placeholder="Write your email here">
+        <input class="size" type="email" name="email" placeholder="Write your email here">
         <label>Phone:</label>
-        <input type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+        <input class="size" type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
         <label>Birthday:</label>
-        <input type="date" name="Birthday">
+        <input class="size" type="date" name="Birthday">
         <label>Address:</label>
-        <input type="text" name="Address" placeholder="1234 Fake Lane">
+        <input class="size" type="text" name="Address" placeholder="1234 Fake Lane">
         <input type="submit" value="Submit">
       </fieldset>
     </form>
