--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div id="info">
+    <img src="images/shanaman.png " alt="Wade from youtube">
     <h1>Shanaman warriors</h1>
     <p>The Shanaman warriors is a national UNO league comprised of the best of the best UNO players. These players know how to use 0's, 7's and plus fours as well as special cards in order to make the game play intersting.</p>
     <div id="testimonial">
