fixed style and added login

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+  <form name="unoForm" method="get" action="#null" autocomplete="on">
+    <label>Username:</label>
+    <input class="size" type="text" name="username">
+    <label>password:</label>
+    <input class="size" type="password" name="psw">
+  </form>
   <div id="info">
     <img id="logo" src="images/shanaman.png " alt="Wade from youtube">
     <h1>Shanaman warriors</h1>
@@ -21,7 +27,7 @@
   <div id="sign-up">
     <h1>sign-up</h1>
     <img src="images/sign_up.png " alt="Wade from youtube">
-    <form name="unoForm" method="get" action="#null" autocomplete="on">
+    <form name="sign-up" method="get" action="#null" autocomplete="on">
       <fieldset>
         <label>Username:</label>
         <input class="size" type="text" name="username">
