--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <form id="login" name="unoForm" method="get" action="#null" autocomplete="on">
+  <form name="unoForm" method="get" action="#null" autocomplete="on">
     <label>Username:</label>
     <input class="size" type="text" name="username">
     <label>password:</label>
