--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <form name="unoForm" method="get" action="#null" autocomplete="on">
     <label>Username:</label>
-    <input class="size" type="text" name="username">
+    <input class="size2" type="text" name="username">
     <label>password:</label>
-    <input class="size" type="password" name="psw">
+    <input class="size2" type="password" name="psw">
   </form>
   <div id="info">
     <img id="logo" src="images/shanaman.png " alt="Wade from youtube">
