--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
 <body>
   <form name="unoForm" method="get" action="#null" autocomplete="on">
-    <label>Username:</label>
-    <input class="size2" type="text" name="username">
-    <label>password:</label>
-    <input class="size2" type="password" name="psw">
+    <div id="login">
+      <label>Username:</label>
+      <input class="size2" type="text" name="username">
+      <label>password:</label>
+      <input class="size2" type="password" name="psw">
+      <input type="submit" value="Submit">
+    </div>
   </form>
   <div id="info">
     <img id="logo" src="images/shanaman.png " alt="Wade from youtube">
