--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <form name="unoForm" method="get" action="#null" autocomplete="on">
+  <form name="login_form" method="get" action="#null" autocomplete="on">
     <div id="login">
       <label>Username:</label>
       <input class="size2" type="text" name="username">
@@ -30,7 +30,7 @@
   <div id="sign-up">
     <h1>sign-up</h1>
     <img src="images/sign_up.png " alt="Wade from youtube">
-    <form name="sign-up" method="get" action="#null" autocomplete="on">
+    <form name="sign-up_form" method="get" action="#null" autocomplete="on">
       <fieldset>
         <label>Username:</label>
         <input class="size" type="text" name="username">
