--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <input type="submit" value="Submit">
     </div>
   </form>
+  <div id="rectangle"></div>
   <div id="info">
     <img id="logo" src="images/shanaman.png " alt="Wade from youtube">
     <h1>Shanaman warriors</h1>
