fixed alt test for images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </form>
   <div id="rectangle"></div>
   <div id="info">
-    <img id="logo" src="images/shanaman.png " alt="Wade from youtube">
+    <img id="logo" src="images/shanaman.png " alt="Shanaman warrior">
     <h1>Shanaman warriors</h1>
     <p>The Shanaman warriors is a national UNO league comprised of the best of the best UNO players. These players know how to use 0's, 7's and plus fours as well as special cards in order to make the game play intersting.</p>
     <div id="testimonial">
@@ -30,7 +30,7 @@
   </div>
   <div id="sign-up">
     <h1>sign-up</h1>
-    <img src="images/sign_up.png " alt="Wade from youtube">
+    <img src="images/sign_up.png " alt="sign-up">
     <form name="sign-up_form" method="get" action="#null" autocomplete="on">
       <fieldset>
         <label>Username:</label>
