--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input class="size2" type="text" name="username">
       <label>password:</label>
       <input class="size2" type="password" name="psw">
-      <input type="submit" value="Submit">
+      <input type="submit" value="login">
     </div>
   </form>
   <div id="rectangle"></div>
@@ -45,7 +45,7 @@
         <input class="size" type="date" name="Birthday">
         <label>Address:</label>
         <input class="size" type="text" name="Address" placeholder="1234 Fake Lane">
-        <input type="submit" value="Submit">
+        <input type="submit" value="sign-up">
       </fieldset>
     </form>
   </div>
