--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <form name="login_form" method="get" action="#null" autocomplete="on">
     <div id="login">
       <label>Username:</label>
-      <input class="size2" type="text" name="username">
+      <input class="size2" type="text" name="username" placeholder="username">
       <label>password:</label>
       <input class="size2" type="password" name="psw">
       <input type="submit" value="login">
