--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
   <form name="login_form" method="get" action="#null" autocomplete="on">
     <div id="login">
-      <label>Username:</label>
       <input class="size2" type="text" name="username" placeholder="username">
-      <label>password:</label>
-      <input class="size2" type="password" name="psw">
+      <input class="size2" type="password" name="psw" placeholder="password">
       <input type="submit" value="login">
     </div>
   </form>
