--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <label>Email:</label>
         <input class="size" type="email" name="email" placeholder="Write your email here">
         <label>Phone:</label>
-        <input class="size" type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+        <input class="size" type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
         <label>Birthday:</label>
         <input class="size" type="date" name="Birthday">
         <label>Address:</label>
