--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Project 1</title>
   <link rel="stylesheet" href="css/reset_fixed.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="js/validate.js">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 
