--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Project 1</title>
   <link rel="stylesheet" href="css/reset_fixed.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="js/validate.js">
+  <script src="js/validate.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <form name="login_form" method="get" action="#null" autocomplete="on">
+  <form name="login_form" method="get" action="#null" autocomplete="on" onsubmit="return validateForm()">
     <div id="login">
       <input class="size2" type="text" name="username" placeholder="username">
       <input class="size2" type="password" name="psw" placeholder="password">
@@ -31,7 +31,7 @@
   <div id="sign-up">
     <h1>sign-up</h1>
     <img src="images/sign_up.png " alt="sign-up">
-    <form name="sign-up_form" method="get" action="#null" autocomplete="on">
+    <form name="sign-up_form" method="get" action="#null" autocomplete="on" onsubmit="return validateForm()">
       <fieldset>
         <label>Username:</label>
         <input class="size" type="text" name="username">
