--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <form name="login_form" method="get" action="#null" autocomplete="on" onsubmit="return validateForm()">
+  <form name="login_form" method="get" action="#null" autocomplete="on" onsubmit="return validateForm1()">
     <div id="login">
       <input class="size2" type="text" name="username" placeholder="username">
       <input class="size2" type="password" name="psw" placeholder="password">
@@ -31,7 +31,7 @@
   <div id="sign-up">
     <h1>sign-up</h1>
     <img src="images/sign_up.png " alt="sign-up">
-    <form name="sign-up_form" method="get" action="#null" autocomplete="on" onsubmit="return validateForm()">
+    <form name="sign-up_form" method="get" action="#null" autocomplete="on" onsubmit="return validateForm2()">
       <fieldset>
         <label>Username:</label>
         <input class="size" type="text" name="username">
