--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <label>Phone:</label>
         <input class="size" type="tel" name="Phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
         <label>Birthday:</label>
-        <input class="size" type="date" name="Birthday">
+        <input class="size" type="date" name="Birthday" required>
         <label>Address:</label>
         <input class="size" type="text" name="Address" placeholder="1234 Fake Lane">
         <input type="submit" value="sign-up">
