fixing style and capitalization

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div id="rectangle"></div>
   <div id="info">
     <img id="logo" src="images/shanaman.png " alt="Shanaman warrior">
-    <h1>Shanaman warriors</h1>
-    <p>The Shanaman warriors is a national UNO league comprised of the best of the best UNO players. These players know how to use 0's, 7's and plus fours as well as special cards in order to make the game play intersting.</p>
+    <h1>Shanaman Warriors</h1>
+    <p>The Shanaman Warriors is a national UNO league comprised of the best of the best UNO players. These players know how to use 0's, 7's and plus fours as well as special cards in order to make the game play intersting.</p>
     <div id="testimonial">
       <img src="images/wade.jpg " alt="Wade from youtube">
       <p> "I have learned from masters the sacred art of UNO".</p><span>Wade youtube's best UNO player.</span>
