--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <fieldset>
         <label>Username:</label>
         <input class="size" type="text" name="username">
-        <label>password:</label>
+        <label>Password:</label>
         <input class="size" type="password" name="psw">
         <label>Email:</label>
         <input class="size" type="email" name="email" placeholder="Write your email here">
